Fixed loader in dark mode

--- a/src/components/ui/loader/Loader.module.scss
+++ b/src/components/ui/loader/Loader.module.scss
@@ -1,5 +1,5 @@
 .spinnerContainer {
-	background-color: #fff;
+	background-color: transparent;
 	z-index: 99;
 	position: fixed;
 	padding: 10px;
@@ -92,7 +92,4 @@
 }
 .disappearLoader-exit-done {
 	opacity: 0;
-}
-.text {
-	color: black !important;
 }
